# StockLens-AI

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
android/: gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  api_logging.py  config.py  logging_config.py  main.py  models.py
backend/app/middleware/: timeout.py
backend/app/providers/: __init__.py  ai_explanation_provider.py  cache.py  chart_metadata_provider.py  errors.py  finnhub_news_provider.py  litellm_logging.py  mock.py  protocols.py  vision_provider.py  yfinance_fundamentals_provider.py  yfinance_provider.py
backend/app/services/: analysis_service.py  candlestick_extractor.py  compliance.py  data_quality.py  explanation.py  indicators.py  market_context.py  risk.py  scoring.py  screenshot_parser.py  sentiment.py  ticker_extraction.py
backend/tests/: analyze_request.py  conftest.py  health_request.py  parse_screenshot_request.py  providers_status_request.py  request_utils.py  test_api.py  test_config.py  test_errors.py  test_glm_provider.py  test_logging.py  test_providers.py
docs/: api_contract.md  architecture.md  compliance_notes.md  product_spec.md  roadmap.md  security_privacy.md  test_plan.md
(+24 files in other folders)
