[project]
name = "stocklens-ai-backend"
version = "0.1.0"
description = "FastAPI backend MVP for StockLens AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
