[project]
name = "stocklens-ai-backend"
version = "0.1.0"
description = "FastAPI backend MVP for StockLens AI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "httpx>=0.27,<1.0",
  "yfinance>=0.2.36,<1.0",
  "pandas>=2.0,<3.0",
  "cachetools>=5.3,<6.0",
  "litellm>=1.40,<2.0",
  "pytesseract>=0.3.10",
  "pillow>=10.0,<11.0",
  "opencv-python-headless>=4.13.0.92",
  "numpy>=2.4.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: marks tests that call real external APIs (deselect with '-m \"not integration\"')",
]
